day_2_work_added cart pagr_UI

--- a/login.css
+++ b/login.css
@@ -45,7 +45,7 @@
       height: 40px;
       width: 508px;
       border-radius: 3px;
-      background-color: rgb(7, 104, 248);
+      background-color: #faa619;
       color: white;
       border: 0;
     }
@@ -100,3 +100,11 @@
       color: red;
     }
   
+    body>div{
+      height: 535px;
+      margin: auto;
+      width: 560px;
+      
+      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;;
+      border-radius: 7px;
+    }
