--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
   font-family: sans-serif;
 }
 #top_bar {
-    /* border: 1px solid red; */
+    
     margin: auto;
     display: flex;
     justify-content: space-between;
@@ -11,7 +11,8 @@
     text-align: center;
     padding-left: 5%;
     padding-right: 5%;
-    
+   
+    width: 100%;
 
    
 }
@@ -31,15 +32,17 @@
 }
 
 #nav_bar{
-   
+ 
+ 
     display: flex;
    
    justify-content: space-evenly;
-    margin-top: 10px;
+   
     background-color: #F7F7F8;
    
     padding-top: 20px;
     text-align: center;
+    width: 100%;
    
 }
 #logo
@@ -47,7 +50,7 @@
  
     border-radius: 5px;
   width: 200px;
-  height: 70px;
+  height: 80px;
   margin-bottom: 20px;
  
 }
@@ -56,6 +59,8 @@
     height: 40px;
     width: 250px;
     margin-top: 15px;
+    border-radius: 10px;
+   
 }
 #nav_bar>a>h4{
     margin-top: 25px;
@@ -66,6 +71,99 @@
     text-decoration: none;
     color: black;
 }
+#nav_bar>a:hover{
+  color: orange;
+}
+/* drop down list */
+
+#women_list{
+ /* position: absolute; */
+  height: 300px;
+  
+  display: flex;
+  justify-content: space-evenly;
+  padding: 20px;
+  margin-left: 5%;
+  display: none;
+ 
+}
+#womin_list_last a {
+ display: flex;
+ flex-direction: column;
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+}
+#women_list a ,  #mens_list a , #kids_list a , #shoes_bag_list a , #beauty_list a{
+  text-decoration: none;
+  color: rgb(123, 121, 121);
+ 
+}
+#women_list>div a:first-child ,  #mens_list a:first-child , #kids_list a:first-child
+,#shoes_bag_list a:first-child , #beauty_list a:first-child{
+ color: black;
+ font-size: larger;
+ font-weight: bold;
+}
+#women_list a:hover ,  #mens_list a:hover , #kids_list a:hover , #shoes_bag_list a:hover , #beauty_list a:hover{
+  color: orange;
+}
+#women_list>div a:first-child:hover{
+  color: orange;
+}
+
+#mens_list{
+  height: 300px;
+  
+  display: flex;
+  justify-content: space-evenly;
+  padding: 10px;
+  margin-left: 5%;
+
+ padding-bottom: 30px;
+ display: none;
+}
+#kids_list{
+  height: 300px;
+  
+  display: flex;
+  justify-content: space-evenly;
+  padding: 10px;
+  margin-left: 5%;
+
+ padding-bottom: 30px;
+ display: none;
+
+}
+#shoes_bag_list{
+  height: 300px;
+  
+  display: flex;
+  justify-content: space-evenly;
+  padding: 10px;
+  margin-left: 5%;
+
+ padding-bottom: 30px;
+ display: none;
+}
+#beauty_list{
+  height: 300px;
+  
+  display: flex;
+  justify-content: space-evenly;
+  padding: 10px;
+  margin-left: 5%;
+
+ padding-bottom: 30px;
+ display: none;
+}
+/* #pop_up{
+  background-color: orange;
+  margin-left: 75%;
+  margin-right: 15%;
+  text-align: center;
+  padding: 10px;
+} */
 
 /* banner */
 .carousel-inner > .item > img,
@@ -78,10 +176,11 @@
 	width: 200%;
   }
   #banner{
-  
+ 
     margin-top: 50px;
     width: 90%;
   }
+ 
 
   /* off section */
   .off_section{
@@ -127,6 +226,7 @@
   #Winterwear>div>img{
    
    margin-left: 20px;
+   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   }
 
   /* trending */
@@ -188,14 +288,14 @@
     height: 100%;
     margin-right: 20px;
     margin-left: 20px;
-   
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
    
   }
   #mens_in_top_category>img{
     height: 100%;
     margin-right: 20px;
     margin-left: 20px;
-    
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
    
   }
   #kids_in_top_category>img{
@@ -203,20 +303,20 @@
     margin-right: 20px;
     margin-left: 20px;
     
-   
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   }
   #shoes_in_top_category>img {
     height: 100%;
     margin-right: 20px;
     margin-left: 20px;
-    
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
    
   }
   #beauty_in_top_category>img{
     height: 100%;
     margin-right: 20px;
     margin-left: 100px;
-     
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   }
   #top-category1>h2{
   margin-left: 8%;
@@ -233,6 +333,7 @@
    
     margin-left: 20px;
     margin-bottom: 20px;
+   
    }
  #top_brands_discount{
   margin-left: 8%;
@@ -247,6 +348,7 @@
   height: 20%;
   width: 13%;
   margin-left: 20px;
+  
  }
  #season_hotest_pic{
   margin-left: 8%;
@@ -260,6 +362,7 @@
   height: 35%;
   width: 22%;
   margin-left: 20px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  }
  #top_brands_we_love{
   margin-left: 8%;
@@ -273,6 +376,7 @@
  height: 35%;
  width: 14%;
  margin-left: 20px;
+ box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 #value_pics{
   margin-left: 8%;
@@ -281,6 +385,7 @@
 }
 #value_pics img{
   margin: 15px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 #subscribe{
 
@@ -338,6 +443,8 @@
   display: grid;
   grid-template-columns: repeat(5,1fr);
   margin-left: 8%;
+  font-size: larger;
+  
 }
 #footer a{
   text-decoration: none;
@@ -345,10 +452,13 @@
   margin-bottom: 5px;
 
 }
+#footer a:hover{
+  color: orange;
+}
 #contact{
 
   display: flex;
-  margin-top: 50px;
+  margin-top: 120px;
   margin-left: 8%;
   justify-content: space-evenly;
   font-size: larger;
@@ -356,4 +466,81 @@
 #contact img{
   width: 10%;
   margin-right: 20px;
+}
+
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: red;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+ 
+}
+
+#myBtn:hover {
+  background-color: orange;
+}
+
+
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+#side_menu{
+  display: none;
+}
+
+
+
+
+@media screen and (min-width:700px) and (max-width:1000px){
+  /* #women_list_head ,#men_list_head ,#kids_head ,#shoes_bag_head , #beauty_head ,#more_head,#login_head,#wish_head,#cart_head{
+    display: none;
+  } */
+  #side_menu{
+    display: block;
+  }
+  #top_bar{
+   
+    padding-left: 10%;
+  }
+  
 }
