--- a/CSS/checkout.css
+++ b/CSS/checkout.css
@@ -1,4 +1,192 @@
 * {
   margin: 0px;
   padding: 0px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+#top_bar {
+  /* border: 1px solid red; */
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  color: white;
+  background-color: black;
+  text-align: center;
+  height: 50px;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+#top_bar h5 {
+  margin: auto;
+}
+#left_top {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 40px;
+}
+
+#right_top {
+  /* border: 1px solid green; */
+  width: 30%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+#nav_bar {
+  display: flex;
+  justify-content: space-evenly;
+  background-color: #f7f7f8;
+  text-align: center;
+}
+#logo {
+  border-radius: 5px;
+  width: 230px;
+  height: 90px;
+}
+#nav_bar > a > input {
+  height: 40px;
+  width: 250px;
+}
+#nav_bar > a {
+  text-decoration: none;
+  color: black;
+  margin: auto;
+}
+
+.footer {
+  width: 100%;
+  height: 380px;
+}
+.yourproducts {
+  margin: 10px;
+  margin-left: 100px;
+  font-size: 30px;
+  font-weight: lighter;
+}
+.checkoutpage {
+  background-color: white;
+  margin: auto;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  width: 80%;
+  height: auto;
+  display: flex;
+  padding: 10px;
+}
+.checkoutpage > div {
+  margin: 5px;
+}
+.showproducts {
+  width: 69%;
+}
+.product-card {
+  margin: 4px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  padding: 5px;
+  height: auto;
+  display: flex;
+  justify-content: left;
+}
+.product-card > div > img {
+  width: 110px;
+  margin: 7px;
+}
+.product-card > div:nth-child(2) {
+  width: 82%;
+  padding: 10px;
+  position: relative;
+}
+.cardbuttons {
+  cursor: pointer;
+  width: 95%;
+  position: absolute;
+  bottom: 0px;
+  display: flex;
+  justify-content: space-around;
+}
+.removeNview {
+  cursor: pointer;
+  margin: 8px;
+  font-weight: 700;
+  width: 45%;
+  font-size: 18px;
+  border: 0.5px solid gainsboro;
+  background-color: white;
+  color: orange;
+  padding: 10px;
+}
+.plusminus {
+  cursor: pointer;
+  border-radius: 100px;
+  font-size: 10px;
+  border: 0px;
+  background-color: rgb(250, 238, 216);
+  color: white;
+  padding: 6px 5px;
+}
+.plusminus:hover {
+  background-color: rgb(255, 247, 162);
+}
+.checkoutsection {
+  width: 30%;
+}
+.checkout-subs {
+  margin: 4px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  padding: 10px;
+  height: auto;
+}
+#pincode {
+  margin: 10px;
+  padding: 10px 15px;
+  border-radius: 5px;
+  border: 0px;
+  background-color: rgb(247, 201, 216);
+}
+#checkbutton {
+  cursor: pointer;
+  background-color: orange;
+  border-radius: 4px;
+  border: 0px;
+  color: white;
+  font-size: 17px;
+}
+#delievery-input,
+#checkbutton {
+  padding: 7px 10px;
+}
+#offersub {
+  padding: 5px;
+  display: flex;
+  justify-content: left;
+}
+#offerimg {
+  width: 100px;
+  margin: 10px;
+}
+.totals {
+  font-size: 17px;
+  font-weight: bold;
+}
+#totals > div {
+  display: flex;
+  justify-content: space-between;
+}
+.Total {
+  font-size: 21px;
+}
+#Checkout {
+  cursor: pointer;
+  width: 100%;
+  padding: 10px;
+  color: white;
+  border: 0px;
+  border-radius: 2px;
+  background-color: orange;
+  font-size: 20px;
+  font-weight: bold;
+}
+hr {
+  margin: 10px 0px;
 }
