--- a/mens.css
+++ b/mens.css
@@ -12,6 +12,33 @@
     width: 100%;
     margin: 20px 0px;
 }
+#slider{
+    border: 1px solid red;
+}
+#slider>img{
+    width: 100%;
+}
+.pre{
+    background-color: white;
+    position: absolute;
+    top: 41%;
+    left: 0px;
+    font-size: 30px;
+    padding: 5px 15px;
+    border-radius: 50%;
+    border: 1px solid teal;
+}
+.next{
+    background-color: white;
+    position: absolute;
+    top: 41%;
+    right: 0px;
+    font-size: 30px;
+    padding: 5px 15px;
+    border-radius: 50%;
+    border: 1px solid teal;
+}
+
 #button{
     text-align: center;
 }
@@ -110,4 +137,19 @@ hr{
 }
 #shopByDepartment>img{
     width: 33%;
+}
+#sliderDiv{
+    border: 1px solid red;
+    width: 99%;
+    height: 500px;
+    margin: auto;
+    position: relative;
+    overflow: hidden;
+}
+
+.slider{
+    width: 100%;
+    height: 100%;
+    transition: 1s;
+    position: absolute;
 }
