--- a/CSS/Admin.css
+++ b/CSS/Admin.css
@@ -1,16 +1,8 @@
-/*! ----------------------------Small Screen Sizes -------------------------------- */
-@media all and (min-width: 320px) and (max-width: 809px) {
-  /*-------------------------- Universals-------------------------- */
-  form {
-    grid-template-columns: repeat(1, 1fr);
-  }
-  /* -------------------------Page Specifcs------------------------- */
-}
-
 * {
   margin: 0px;
   padding: 0px;
-  font-family: "Open Sans", sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 #loader {
   display: none;
@@ -18,9 +10,20 @@
   width: 50px;
 }
 #fetchbutton {
+  border-radius: 5px;
+  color: white;
+  text-decoration: none;
   position: absolute;
-  top: 10px;
+  top: 125px;
   right: 50px;
+  border: 0px;
+  background-color: rgb(171, 214, 40);
+  padding: 10px;
+  transition: all 350ms ease;
+}
+#fetchbutton:hover {
+  transform: scale(1.05);
+  border-bottom: 2px solid green;
 }
 #tophead {
   display: flex;
@@ -44,6 +47,9 @@ input {
   width: 90%;
   padding: 10px;
 }
+input:focus {
+  outline: 2px solid rgb(91, 200, 246);
+}
 .CRUDsections {
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
     rgba(0, 0, 0, 0.22) 0px 10px 10px;
@@ -56,6 +62,8 @@ input {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 .add-submit {
+  cursor: pointer;
+  font-weight: bold;
   width: 31%;
   position: absolute;
   right: 16px;
@@ -67,13 +75,12 @@ input {
   color: white;
   font-size: 20px;
   background-color: rgb(0, 148, 253);
+  transition: all 300ms ease;
 }
 .add-submit:hover {
-  cursor: pointer;
   background-color: rgb(0, 81, 255);
   color: rgb(255, 255, 255);
   transform: scale(1.005);
-  z-index: 1.1;
 }
 select {
   cursor: pointer;
@@ -98,6 +105,12 @@ select {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
     rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   place-items: center;
+  transition: all 250ms ease;
+}
+.DeleteProductCard:hover {
+  cursor: pointer;
+  transform: scale(1.009);
+  z-index: 1.001;
 }
 .DeleteProductCard > div {
   height: 80px;
@@ -132,9 +145,11 @@ select {
   right: 25px;
 }
 #delete-product-button {
+  transition: all 300ms ease;
   background-color: rgb(215, 8, 8);
 }
 #edit-product-button {
+  transition: all 300ms ease;
   background-color: rgb(48, 25, 220);
 }
 #delete-product-button:hover {
@@ -193,4 +208,12 @@ select {
   grid-template-columns: repeat(4, 1fr);
   gap: 10px;
   padding: 10px;
+}
+/*! ----------------------------Small Screen Sizes -------------------------------- */
+@media all and (min-width: 320px) and (max-width: 809px) {
+  /*-------------------------- Universals-------------------------- */
+  form {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  /* -------------------------Page Specifcs------------------------- */
 }
