--- a/index.css
+++ b/index.css
@@ -13,6 +13,9 @@
     padding-right: 5%;
    
     width: 100%;
+    z-index: 1;
+    position: sticky;
+    top: 0px;
 
    
 }
@@ -43,11 +46,13 @@
     padding-top: 20px;
     text-align: center;
     width: 100%;
-   
+    position: fixed;
+    z-index: 1;
+  
 }
 #logo
 {
- 
+ position: relative;
     border-radius: 5px;
   width: 200px;
   height: 80px;
@@ -77,7 +82,7 @@
 /* drop down list */
 
 #women_list{
- /* position: absolute; */
+
   height: 300px;
   
   display: flex;
@@ -85,6 +90,7 @@
   padding: 20px;
   margin-left: 5%;
   display: none;
+  margin-top: 120px;
  
 }
 #womin_list_last a {
@@ -119,13 +125,13 @@
   justify-content: space-evenly;
   padding: 10px;
   margin-left: 5%;
-
+  margin-top: 120px;
  padding-bottom: 30px;
  display: none;
 }
 #kids_list{
   height: 300px;
-  
+  margin-top: 120px;
   display: flex;
   justify-content: space-evenly;
   padding: 10px;
@@ -137,7 +143,7 @@
 }
 #shoes_bag_list{
   height: 300px;
-  
+  margin-top: 120px;
   display: flex;
   justify-content: space-evenly;
   padding: 10px;
@@ -148,7 +154,7 @@
 }
 #beauty_list{
   height: 300px;
-  
+  margin-top: 120px;
   display: flex;
   justify-content: space-evenly;
   padding: 10px;
@@ -176,8 +182,8 @@
 	width: 200%;
   }
   #banner{
- 
-    margin-top: 50px;
+   margin-top: 150px;
+   
     width: 90%;
   }
  
@@ -491,56 +497,394 @@
 }
 
 
-.sidenav {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
-}
-
-.sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
-
-.sidenav a:hover {
-  color: #f1f1f1;
-}
-
-.sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-}
-#side_menu{
-  display: none;
-}
 
 
 
 
-@media screen and (min-width:700px) and (max-width:1000px){
-  /* #women_list_head ,#men_list_head ,#kids_head ,#shoes_bag_head , #beauty_head ,#more_head,#login_head,#wish_head,#cart_head{
-    display: none;
-  } */
-  #side_menu{
-    display: block;
+
+@media all and (min-width: 810px) and (max-width: 1280px) {
+  /* <!----------------------------------------------- Header -----------------------------------------------> */
+  #top_bar {
+    flex-direction: column;
+    height: auto;
+    padding: 7px;
+    width: 100%;
   }
-  #top_bar{
-   
-    padding-left: 10%;
+  #top_bar h5 {
+    font-size: 10px;
+    font-weight: light;
+  }
+  #right_top {
+    display: none;
+  }
+  #logo {
+    position: relative;
+    top: 8px;
+    left: 84px;
+    margin-right: 150px;
+    padding: 0%;
+    width: 70%;
   }
   
+  #nav_bar{
+    /* border: 1px solid red; */
+    display: grid;
+    grid-template-columns: repeat(5, 20%);
+  margin: 0%;
+   gap: 1px;
+  width: 90%;
+  margin-left: 5%;
+  padding: 0px;
+  }
+  #searchbar {
+    display: none;
+  }
+  #signin {
+    background-color: #f7f4f4;
+    padding: 10px;
+  }
+  #drop_down{
+    display: none;
+  }
+  #banner{
+    margin-top: 200px;
+    margin-left: 10%;
+    
+  }
+  
+  #offer_section_img{
+    width: 100%;
+   
+  }
+  #our_benifit{
+    margin-left: 5%;
+  }
+  #our_benifit>h2{
+    text-align: center;
+  }
+  #our_benifit img{
+    width: 20%;
+    margin-left: 10%;
+  }
+  #unmissable h2{
+   text-align: center;
+
+  }
+  #unmissable>div img{
+    width: 20%;
+  }
+
+  .offer>img{
+    width: 90%;
+  }
+  #Winterwear>h2{
+    text-align: center;
+  }
+  #Winterwear>div>img{
+    width: 20%;
+  }
+  #trending>h2{
+    text-align: center;
+  }
+  #trending>div>img{
+    width: 20%;
+  }
+  #watces>h2{
+    text-align: center;
+  }
+  #watces>div>img{
+    width: 90%;
+  }
+  #top-category1>h2{
+    text-align: center;
+  }
+  #top-category img{
+    width: 30%;
+    height: 50%;
+    margin-bottom: 20px;
+   
+  }
+  #top-category{
+    margin-left: 20%
+  }
+  #top_btn{
+    margin-right: 40px;
+  }
+  #top_deal{
+    margin-top: 80px;
+  }
+  #top_deal>h2{
+   text-align: center;
+   
+  }
+  #top_deal>div>img{
+    width: 42%;
+  }
+  #top_brands_discount>h2{
+    text-align: center;
+  }
+  #season_hotest_pic>h2{
+    text-align: center;
+  }
+  #season_hotest_pic>div>img{
+   width: 20%;
+   
+  }
+  #season_hotest_pic{
+   margin-left: 10%;
+  }
+  #top_brands_we_love>h2{
+    text-align: center;
+  }
+  #top_brands_we_love>div>img{
+    width: 15%;
+  }
+  #top_brands_we_love>div>img:last-child{
+    display: none;
+  }
+
+  #value_pics>h2{
+    text-align: center;
+  }
+  #value_pics>div>img{
+    width: 20%;
+  }
+  #subscribe{
+   font-size: smaller;
+  }
+  #subscribe input{
+   width: 250px;
+  }
+  #footer{
+    grid-template-columns: repeat(4,1fr);
+    font-size:medium;
+  }
+  #contact{
+    font-size: small;
+  }
+  #contact img{
+    width: 8%;
+  }
+}
+
+
+
+
+
+
+
+/*?----------------------------Small Screen Sizes -------------------------------- */
+@media all and (min-width: 10px) and (max-width: 809px) {
+  * {
+    font-size: 12px;
+  }
+  /* <!----------------------------------------------- Header -----------------------------------------------> */
+  #top_bar {
+    flex-direction: column;
+    height: auto;
+    padding: 7px;
+    width: 150%;
+  }
+  #top_bar h5 {
+    font-size: 10px;
+    font-weight: light;
+  }
+  #right_top {
+    display: none;
+  }
+  #logo {
+    position: relative;
+    top: 8px;
+    left: 84px;
+   width: 80%;
+  }
+  #nav-bar {
+    flex-direction: column;
+    font-size: smaller;
+  }
+  #nav_bar {
+    display: grid;
+    grid-template-columns: repeat(3, 30%);
+   
+    margin: auto;
+    width: 70%;
+    margin-left: 10%;
+  }
+  #searchbar {
+    display: none;
+  }
+  #signin {
+    background-color: #f7f4f4;
+    padding: 10px;
+  }
+ 
+  #drop_down{
+    display: none;
+  }
+  #banner{
+    margin-top: 300px;
+    margin-left: 25%;
+    
+  }
+ .off_section{
+  margin-left: 33%;
+ }
+  #offer_section_img{
+    width: 100%;
+    margin-left: 7%;
+
+   
+  }
+  #our_benifit{
+    margin-left: 25%;
+  }
+  #our_benifit>h2{
+    text-align: center;
+    margin-left: 30%;
+  }
+  #our_benifit img{
+    width: 90%;
+    margin-left: 20%;
+  }
+  #unmissable{
+    margin-left: 35%;
+  }
+  #unmissable h2{
+   text-align: center;
+   margin-left: 7%;
+
+
+  }
+  #unmissable>div img{
+    width: 35%;
+    margin-left: 10%;
+    margin-bottom: 10px;
+  
+  }
+  .offer{
+    margin-left: 30%;
+  }
+  .offer>img{
+    width: 100%;
+  }
+  #Winterwear{
+    margin-left: 25%;
+  }
+
+  #Winterwear>h2{
+    text-align: center;
+  }
+  #Winterwear>div>img{
+    width: 30%;
+    margin-left: 15%;
+    margin-bottom: 20px;
+  }
+  #trending{
+    margin-left: 25%;
+  }
+  #trending>h2{
+    text-align: center;
+  }
+  #trending>div>img{
+    width: 30%;
+    margin-left: 15%;
+  }
+  #watces>h2{
+    text-align: center;
+    margin-left: 25%;
+  }
+  #watces>div>img{
+    width: 90%;
+    margin-left: 20%;
+  }
+  #top-category1{
+    display: none;
+  }
+  #top-category1>h2{
+    text-align: center;
+  }
+  #top-category img{
+    width: 30%;
+    height: 50%;
+    margin-bottom: 20px;
+   
+  }
+  #top-category{
+    margin-left: 20%
+  }
+  #top_btn{
+    margin-right: 40px;
+  }
+  #top_deal{
+    margin-top: 80px;
+    margin-left: 35%;
+  }
+  #top_deal>h2{
+   text-align: center;
+   
+  }
+  #top_deal>div>img{
+    width: 90%;
+  }
+  #top_brands_discount>h2{
+    text-align: center;
+  }
+  #top_brands_discount{
+    margin-left: 40%;
+  }
+  #top_brands_discount>div>img{
+    width: 45%;
+   
+  }
+ 
+  #season_hotest_pic>h2{
+    text-align: center;
+  }
+  #season_hotest_pic>div>img{
+   width: 45%;
+   
+  }
+  #season_hotest_pic{
+   margin-left: 35%;
+  }
+
+  #top_brands_we_love{
+    margin-left: 35%;
+  }
+  #top_brands_we_love>h2{
+    text-align: center;
+  }
+  #top_brands_we_love>div>img{
+    width: 45%;
+  }
+ 
+  #value_pics{
+    margin-left: 30%;
+  }
+  #value_pics>h2{
+    text-align: center;
+  }
+  #value_pics>div>img{
+    width: 35%;
+    margin-left: 10%;
+  }
+  #subscribe{
+   font-size: smaller;
+   margin-left: 35%;
+  }
+  #subscribe input{
+   width: 250px;
+  }
+  #footer{
+    grid-template-columns: repeat(4,1fr);
+    font-size:larger;
+    margin-left: 35%;
+  }
+  #contact{
+    font-size: small;
+    margin-left: 35%;
+  }
+  #contact img{
+    width: 8%;
+  }
 }
