--- a/signup.css
+++ b/signup.css
@@ -34,6 +34,9 @@
   padding-left: 5px;
   align-items: center;
 }
+.box>h1{
+  color: #faa619;
+}
 
 #name,
 #email,
@@ -125,6 +128,9 @@ body>div{
   
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;;
   border-radius: 7px;
+}
+::placeholder{
+  color: rgb(212, 212, 212)
 }
 
 /* *********************************css for login page************************************************************* */
