--- a/mens.css
+++ b/mens.css
@@ -1,155 +1,673 @@
-*{
-    font-family: sans-serif;
-    margin: 0px;
-    padding: 0px;
-}
-#container{
-    /* border: 1px solid red; */
-    width: 97%;
-    margin: auto;
-}
-#container>img{
-    width: 100%;
-    margin: 20px 0px;
-}
-#slider{
-    border: 1px solid red;
-}
-#slider>img{
-    width: 100%;
-}
-.pre{
-    background-color: white;
-    position: absolute;
-    top: 41%;
-    left: 0px;
-    font-size: 30px;
-    padding: 5px 15px;
-    border-radius: 50%;
-    border: 1px solid teal;
-}
-.next{
-    background-color: white;
-    position: absolute;
-    top: 41%;
-    right: 0px;
-    font-size: 30px;
-    padding: 5px 15px;
-    border-radius: 50%;
-    border: 1px solid teal;
+* {
+  font-family: sans-serif;
+  margin: 0px;
+  padding: 0px;
 }
 
-#button{
-    text-align: center;
+
+#container {
+  /* border: 1px solid red; */
+  width: 97%;
+  margin: auto;
 }
-#button>button{
-    color: orange;
-    background-color: white;
-    border: 1px solid blue;
-    height: 50px;
-    width: 290px;
-    margin: 30px;
+
+#container>img {
+  width: 100%;
+  margin: 20px 0px;
 }
-#button>button:hover{
-    border: 1px solid orange;
+
+#button {
+  text-align: center;
 }
-h2{
-    margin-top: 25px;
+
+#button>button {
+  color: orange;
+  background-color: white;
+  border: 1px solid blue;
+  height: 50px;
+  width: 290px;
+  margin: 30px;
 }
-hr{
-    width: 50px;
-    background-color: orange;
-    border: 2px solid orange ;
-    margin: 5px 0px 15px 0px;
+
+#button>button:hover {
+  border: 1px solid orange;
 }
-#buyFree{
-    display: flex;
-    justify-content: space-between;
+
+h2 {
+  margin-top: 25px;
 }
-#buyFree>img{
-    width: 16%;
+
+hr {
+  width: 50px;
+  background-color: orange;
+  border: 2px solid orange;
+  margin: 5px 0px 15px 0px;
+}
+
+#buyFree {
+  display: flex;
+  justify-content: space-between;
+}
+
+#buyFree>img {
+  width: 16%;
+  margin: 10px 0px;
+}
+
+#brandImage {
+  display: flex;
+  justify-content: space-between;
+}
+
+#brandImage>img {
+  width: 16%;
+  margin: 10px 0px;
+  border-radius: 15px;
+}
+
+#winterClothes {
+  display: flex;
+  justify-content: space-between;
+}
+
+#winterClothes>img {
+  width: 16%;
+  margin: 10px 0px;
+}
+
+#bigBrandsProducts,
+#categoryProducts,
+#trandingBrands {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+#bigBrandsProducts>img,
+#categoryProducts>img,
+#trandingBrands>img {
+  width: 16%;
+  margin: 10px 0px;
+  border-radius: 15px;
+}
+
+#TopPicks,
+#winterTrends,
+#mostlovedstyle,
+#highlights,
+#trendsclothes,
+#activeWardrobe {
+  display: flex;
+  justify-content: space-between;
+}
+
+#TopPicks>img,
+#winterTrends>img,
+#mostlovedstyle>img,
+#highlights>img,
+#trendsclothes>img,
+#activeWardrobe>img {
+  width: 33.3%;
+  margin: 10px 0px;
+}
+
+#dealCorner {
+  display: flex;
+  justify-content: space-between;
+}
+
+#dealCorner>img {
+  width: 19%;
+  height: 300px;
+  margin: 10px 0px;
+}
+
+#mostLovedBrands,
+#essentials {
+  display: flex;
+  justify-content: space-between;
+}
+
+#mostLovedBrands>img,
+#essentials {
+  width: 50%;
+  margin: 10px 0px;
+}
+
+#watch {
+  width: 750px;
+  display: flex;
+  justify-content: space-between;
+}
+
+#watch>img {
+  width: 230px;
+  height: 300px;
+}
+
+#shopByDepartment {
+  display: flex;
+  justify-content: space-between;
+}
+
+#shopByDepartment>img {
+  width: 33%;
+}
+
+
+
+/* <!----------------------------------------------- Header CSS -----------------------------------------------> */
+#top_bar {
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  color: white;
+  background-color: black;
+  text-align: center;
+  height: 50px;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+#top_bar h5 {
+  margin: auto;
+}
+
+#left_top {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 40px;
+}
+
+#right_top {
+  width: 30%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+/* html {
+    position: relative;
+  } */
+#nav_bar {
+  z-index: 1000000;
+  position: sticky;
+  top: 0px;
+  padding: 1px;
+  background-color: rgb(246, 249, 247);
+}
+
+#nav_bar>div {
+  margin: 20px;
+  margin-left: 240px;
+  width: 80%;
+  display: flex;
+  justify-content: right;
+  background-color: rgb(246, 249, 247);
+  text-align: center;
+}
+
+#logo {
+  position: absolute;
+  border-radius: 5px;
+  width: 230px;
+  height: 90px;
+}
+
+#nav_bar>div>a>input {
+  height: 33px;
+  padding: 3px;
+  width: 250px;
+}
+
+#nav_bar>div>a {
+  text-decoration: none;
+  color: black;
+  margin: auto;
+}
+
+/* <!----------------------------------------------- Footer CSS -----------------------------------------------> */
+#subscribe {
+  height: 300px;
+  margin-left: 8%;
+}
+
+#subscribe {
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-between;
+}
+
+#email_subs {
+  margin-top: 20px;
+  margin-left: 20px;
+}
+
+#email_subs>p {
+  margin-bottom: 30px;
+}
+
+#email_subs>input {
+  width: 300px;
+  padding: 0px 8px;
+  height: 50px;
+  margin-left: 10px;
+}
+
+#email_subs>button {
+  width: 200px;
+  height: 50px;
+  background-color: black;
+  color: white;
+  border-radius: 5px;
+}
+
+#play_store {
+  margin-right: 80px;
+  margin-top: 20px;
+}
+
+#play_store>p {
+  margin-bottom: 30px;
+}
+
+#play_store>button {
+  padding: 10px;
+  height: auto;
+  width: 150px;
+  background-color: black;
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+#footer {
+  margin-top: 50px;
+  height: 500px;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  margin-left: 8%;
+  font-size: larger;
+}
+
+#footer a {
+  text-decoration: none;
+  color: rgb(158, 156, 156);
+  margin-bottom: 5px;
+}
+
+#footer a:hover {
+  color: orange;
+}
+
+#contact {
+  display: flex;
+  margin-top: 120px;
+  margin-left: 8%;
+  margin-bottom: 15px;
+  justify-content: space-evenly;
+  font-size: larger;
+}
+
+#contact img {
+  width: 10%;
+  margin-right: 20px;
+}
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: red;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#myBtn:hover {
+  background-color: orange;
+}
+
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+#side_menu {
+  display: none;
+}
+
+/*? ----------------------------Medium Screen Sizes -------------------------------- */
+@media all and (min-width: 810px) and (max-width: 1000px) {
+
+  /* <!----------------------------------------------- Header -----------------------------------------------> */
+  #top_bar {
+    flex-direction: column;
+    height: auto;
+    padding: 7px;
+  }
+
+  #top_bar h5 {
+    font-size: 10px;
+    font-weight: light;
+  }
+
+  #right_top {
+    display: none;
+  }
+
+  #logo {
+    position: relative;
+    top: 8px;
+    left: 84px;
+  }
+
+  #nav_bar>div {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 2px;
+    margin: auto;
+  }
+
+  #searchbar {
+    display: none;
+  }
+
+  #signin {
+    background-color: #f7f4f4;
+    padding: 10px;
+  }
+
+  /*========my media query start--------------------------------- */
+  #container {
+    border: 2px solid red;
+    margin: auto;
+
+  }
+
+  #buyFree {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  #buyFree>img {
+    width: 98%;
+  }
+  #brandImage {
+   display: grid;
+   grid-template-columns: repeat(3,1fr);
+  }
+  #brandImage>img {
+    width:95%;
+  }
+
+  #winterClothes {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+  }
+
+  #winterClothes>img {
+    width: 95%;
     margin: 10px 0px;
-}
-#brandImage{
-    display: flex;
-    justify-content: space-between;
-}
-#brandImage>img{
-    width: 16%;
+  }
+
+  #bigBrandsProducts,
+  #categoryProducts,
+  #trandingBrands {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+  }
+
+  #bigBrandsProducts>img,
+  #categoryProducts>img,
+  #trandingBrands>img {
+    width: 95%;
     margin: 10px 0px;
     border-radius: 15px;
-}
-#winterClothes{
+  }
+
+  #TopPicks,
+  #winterTrends,
+  #mostlovedstyle,
+  #highlights,
+  #trendsclothes,
+  #activeWardrobe {
     display: flex;
     justify-content: space-between;
-}
-#winterClothes>img{
-    width: 16%;
+  }
+
+  #TopPicks>img,
+  #winterTrends>img,
+  #mostlovedstyle>img,
+  #highlights>img,
+  #trendsclothes>img,
+  #activeWardrobe>img {
+    width: 33.3%;
     margin: 10px 0px;
+  }
+
+  #dealCorner {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  #dealCorner>img {
+    width:95%;
+    height: 500px;
+    margin: 10px 0px;
+  }
+
 }
-#bigBrandsProducts , #categoryProducts, #trandingBrands{
+
+
+/*?----------------------------Small Screen Sizes -------------------------------- */
+@media all and (min-width: 10px) and (max-width: 809px) {
+  * {
+    font-size: 12px;
+  }
+
+  /* <!----------------------------------------------- Header -----------------------------------------------> */
+  #top_bar {
+    flex-direction: column;
+    height: auto;
+    padding: 7px;
+  }
+
+  #top_bar h5 {
+    font-size: 10px;
+    font-weight: light;
+  }
+
+  #right_top {
+    display: none;
+  }
+
+  #logo {
+    position: relative;
+    top: 8px;
+    left: 84px;
+  }
+
+  #nav-bar {
+    flex-direction: column;
+  }
+
+  #nav_bar>div {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 2px;
+    margin: auto;
+  }
+
+  #searchbar {
+    display: none;
+  }
+
+  #signin {
+    background-color: #f7f4f4;
+    padding: 10px;
+  }
+
+  /* <!----------------------------------------------- Footer -----------------------------------------------> */
+  #subscribe {
+    flex-direction: column;
+  }
+
+  #email_subs>input {
+    margin: auto;
+    margin-bottom: 2px;
+    border: 1px solid black;
+  }
+
+  #play_store {
+    margin: auto;
+  }
+
+  #email_subs>button {
+    width: 95%;
+  }
+
+  #contact {
+    margin: auto;
+    display: grid;
+    margin: 20px;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    align-items: center;
+  }
+
+  #footer {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  /*======================men page responsive========== */
+  #container {
+    border: 1px solid red;
+  }
+  
+  
+  #buyFree, #brandImage, #winterClothes{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  
+  #buyFree>img, #brandImage>img, #winterClothes>img {
+    width: 95%;
+    margin: 10px 0px;
+  }
+  
+  #bigBrandsProducts,
+  #categoryProducts,
+  #trandingBrands {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  
+  #bigBrandsProducts>img,
+  #categoryProducts>img,
+  #trandingBrands>img {
+    width: 95%;
+    
+  }
+  #TopPicks,
+  #winterTrends,
+  #mostlovedstyle,
+  #highlights,
+  #trendsclothes,
+  #activeWardrobe {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-}
-#bigBrandsProducts>img , #categoryProducts>img, #trandingBrands>img{
-    width: 16%;
-    margin: 10px 0px;
-    border-radius: 15px;
-}
-#TopPicks, #winterTrends, #mostlovedstyle, #highlights, #trendsclothes, #activeWardrobe{
-    display: flex;
-    justify-content: space-between;
-}
-#TopPicks>img, #winterTrends>img, #mostlovedstyle>img, #highlights>img, #trendsclothes>img, #activeWardrobe>img{
-    width: 33.3%;
-    margin: 10px 0px;
-}
-#dealCorner{
-    display: flex;
-    justify-content: space-between;
-}
-#dealCorner>img{
-    width: 19%;
-    height: 300px;
-    margin: 10px 0px;
-}
-#mostLovedBrands, #essentials{
-    display: flex;
-    justify-content: space-between;
-}
-#mostLovedBrands>img, #essentials{
+  }
+  
+  #TopPicks>img,
+  #winterTrends>img,
+  #mostlovedstyle>img,
+  #highlights>img,
+  #trendsclothes>img,
+  #activeWardrobe>img {
     width: 50%;
     margin: 10px 0px;
-}
-#watch{
-    width: 750px;
-    display: flex;
-    justify-content: space-between;
-}
-#watch>img{
-    width: 230px;
-    height: 300px;
-}
-#shopByDepartment{
-    display: flex;
-    justify-content: space-between;
-}
-#shopByDepartment>img{
-    width: 33%;
-}
-#sliderDiv{
+  }
+  
+  #dealCorner {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  
+  #dealCorner>img {
+    width: 95%;
+    height: 250px;
+    margin: 10px 0px;
+  }
+  
+  #mostLovedBrands,
+  #essentials {
     border: 1px solid red;
-    width: 99%;
-    height: 500px;
-    margin: auto;
-    position: relative;
-    overflow: hidden;
-}
-
-.slider{
+   display: grid;
+   grid-template-columns: repeat(1, 1fr);
+  }
+  
+  #mostLovedBrands>img,#essentials>img{
     width: 100%;
-    height: 100%;
-    transition: 1s;
-    position: absolute;
+  }
+  #essentials{
+    width: 98%;
+  }
+  
+  #watch {
+    /* border: 1px solid red; */
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  #watch>img {
+   width: 96%;
+  }
+  
+  #shopByDepartment {
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+  }
+  
+  #shopByDepartment>img {
+    width: 100%;
+  }
+  #button>button{
+    width: 250px;
+    margin-left: 16px;
+  }
 }
