--- a/CSS/checkout.css
+++ b/CSS/checkout.css
@@ -55,7 +55,10 @@
   display: flex;
   justify-content: space-around;
 }
-
+#quantity {
+  width: 20px;
+  text-align: center;
+}
 .removeNview {
   cursor: pointer;
   margin: 8px;
