--- a/CSS/checkout.css
+++ b/CSS/checkout.css
@@ -14,6 +14,16 @@
   font-size: 30px;
   font-weight: lighter;
 }
+.EmptyCart {
+  padding: 3px 5px;
+  cursor: pointer;
+  border: 0px;
+  border-bottom: 0.5px solid orange;
+  font-size: 16px;
+  color: orange;
+  font-weight: bold;
+  background-color: white;
+}
 .checkoutpage {
   background-color: white;
   margin: auto;
