--- a/CSS/HeaderFooter.css
+++ b/CSS/HeaderFooter.css
@@ -5,7 +5,7 @@
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-/* <!----------------------------------------------- Header CSS -----------------------------------------------> */
+/*?<!----------------------------------------------- Header CSS -----------------------------------------------> */
 #top_bar {
   margin: auto;
   display: flex;
@@ -66,7 +66,7 @@
   color: black;
   margin: auto;
 }
-/* <!----------------------------------------------- Footer CSS -----------------------------------------------> */
+/* ?<!----------------------------------------------- Footer CSS -----------------------------------------------> */
 #subscribe {
   height: 300px;
   margin-left: 8%;
@@ -201,6 +201,7 @@
 }
 
 /*? ----------------------------Medium Screen Sizes -------------------------------- */
+
 @media all and (min-width: 810px) and (max-width: 1280px) {
   /* <!----------------------------------------------- Header -----------------------------------------------> */
   #top_bar {
